--- a/suhass-backend/.env.example
+++ b/suhass-backend/.env.example
@@ -1,15 +1,14 @@
 # Server
 PORT=4000
 NODE_ENV=development
+JWT_SECRET=supersecretkey_change_me
 
 # Database
-MONGODB_URI=mongodb://localhost:27017/xacos
-# Or for Prisma
-# DATABASE_URL="postgresql://user:password@localhost:5432/xacos?schema=public"
+DB_HOST=localhost
+DB_PORT=5432
+DB_USERNAME=admin
+DB_PASSWORD=admin
+DB_NAME=suhaas_db
 
-# Redis
-REDIS_HOST=localhost
-REDIS_PORT=6379
-
-# JWT (if needed)
-# JWT_SECRET=your-secret-key
+# Frontend URL (for CORS and Invites)
+FRONTEND_URL=http://localhost:5173
