--- a/suhass-backend/package.json
+++ b/suhass-backend/package.json
@@ -7,6 +7,8 @@
   "scripts": {
     "start": "node dist/server.js",
     "dev": "tsx watch src/server.ts",
+    "seed": "tsx src/scripts/seed.ts",
+    "seed:projects": "tsx src/scripts/seed-projects.ts",
     "build": "tsc",
     "ts:watch": "tsc --watch"
   },
@@ -17,16 +19,25 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.3",
+    "pg": "^8.17.2",
+    "reflect-metadata": "^0.2.2",
+    "typeorm": "^0.3.28",
+    "zod": "^4.3.5"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2",
-    "typescript": "^5.3.3",
-    "tsx": "^4.7.0",
+    "@types/bcrypt": "^6.0.0",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.10.5",
-    "@types/cors": "^2.8.17"
+    "@types/pg": "^8.16.0",
+    "nodemon": "^3.0.2",
+    "tsx": "^4.7.0",
+    "typescript": "^5.3.3"
   }
 }
